--- a/src/assets/index.ejs
+++ b/src/assets/index.ejs
@@ -1,57 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title><%= title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
-    />
-    <style>
-      <%- style %>
-    </style>
-  </head>
-  <body>
-    <div class="front-matter">
-      <h1><%= title %></h1>
-      <%- description %>
-      <div class="toc">
-        <% paths.forEach(path => { %>
-        <div class="entry">
-          <span class="path"><%= path.path %></span>
-          <% path.operations.forEach(operation => { %>
-          <span class="operation"
-            ><span class="method <%= operation.method %>"
-              ><%= operation.method %></span
-            >
-            <%= operation.name %></span
-          ><% }); %>
-        </div>
-        <% }); %>
+
+<head>
+  <meta charset="utf-8" />
+  <title><%= title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
+  <style>
+    <%- style %>
+  </style>
+</head>
+
+<body>
+  <div class="front-matter">
+    <h1><%= title %></h1>
+    <%- description %>
+    <div class="toc">
+      <% paths.forEach(path => { %>
+      <div class="entry">
+        <span class="path"><%= path.path %></span>
+        <% path.operations.forEach(operation => { %>
+        <span class="operation"><span class="method <%= operation.method %>"><%= operation.method %></span>
+          <%= operation.name %></span><% }); %>
       </div>
-    </div>
-
-    <% paths.forEach(path => { %>
-    <div class="path">
-      <% path.operations.forEach(operation => { %>
-      <h2>
-        <span class="path">
-          <%= operation.path %>
-          <span class="method <%= operation.method %>"
-            ><%= operation.method %></span
-          ></span
-        >
-        <%= operation.name %>
-      </h2>
-
-      <div class="description"><%- operation.description %></div>
       <% }); %>
     </div>
-    <% }); %>
-  </body>
+  </div>
+
+  <% paths.forEach(path => { %>
+  <div class="path">
+    <% path.operations.forEach(operation => { %>
+    <h2>
+      <span class="path">
+        <%= operation.path %>
+        <span class="method <%= operation.method %>"><%= operation.method %></span></span>
+      <%= operation.name %>
+    </h2>
+    <div class="description"><%- operation.description %></div>
+
+    <hr />
+
+    <% if (operation.security) { %>
+    <div class="security">
+      <h3>Auth</h3>
+      <% operation.security.forEach(scheme_list => {
+        scheme_list.forEach(scheme => { %> <%-
+        include('includes/securityScheme', {scheme,md_to_html}); %> <% }); });
+        %>
+    </div>
+    <% }%> <% if (operation.param_types.path > 0) { %>
+    <div class="parameters path">
+      <h3>Path parameters</h3>
+      <%- include('includes/paramList', {params: operation.params, param_in:
+        'path', md_to_html}); %>
+    </div>
+    <% }%> <% if (operation.param_types.header > 0) { %>
+    <div class="parameters header">
+      <h3>Header parameters</h3>
+      <%- include('includes/paramList', {params: operation.params, param_in:
+        'header', md_to_html}); %>
+    </div>
+    <% }%><% if (operation.param_types.query > 0) { %>
+    <div class="parameters query">
+      <h3>Query string parameters</h3>
+      <%- include('includes/paramList', {params: operation.params, param_in:
+        'query', md_to_html}); %>
+    </div>
+    <% }%> <% if (operation.body) { %>
+    <div class="parameters body">
+      <h3>Request body</h3>
+      <%- include('includes/operationBody', {body: operation.body, md_to_html}); %>
+    </div>
+
+    <hr />
+    <% }%><% }); %>
+  </div>
+  <% }); %>
+</body>
+
 </html>
