--- a/src/assets/index.ejs
+++ b/src/assets/index.ejs
@@ -39,42 +39,41 @@
     </h2>
     <div class="description"><%- operation.description %></div>
 
-    <hr />
-
     <% if (operation.security) { %>
-    <div class="security">
+    <div class="parameters security">
       <h3>Auth</h3>
       <% operation.security.forEach(scheme_list => {
-        scheme_list.forEach(scheme => { %> <%-
-        include('includes/securityScheme', {scheme,md_to_html}); %> <% }); });
-        %>
+        scheme_list.forEach(scheme => { %>
+      <%- include('includes/securityScheme', {scheme,md_to_html}); %>
+      <% }); }); %>
     </div>
-    <% }%> <% if (operation.param_types.path > 0) { %>
+    <% }%>
+    <% if (operation.param_types.path > 0) { %>
     <div class="parameters path">
       <h3>Path parameters</h3>
-      <%- include('includes/paramList', {params: operation.params, param_in:
-        'path', md_to_html}); %>
+      <%- include('includes/paramList', {params: operation.params, param_in: 'path', md_to_html}); %>
     </div>
-    <% }%> <% if (operation.param_types.header > 0) { %>
+    <% }%>
+    <% if (operation.param_types.header > 0) { %>
     <div class="parameters header">
       <h3>Header parameters</h3>
-      <%- include('includes/paramList', {params: operation.params, param_in:
-        'header', md_to_html}); %>
+      <%- include('includes/paramList', {params: operation.params, param_in: 'header', md_to_html}); %>
     </div>
-    <% }%><% if (operation.param_types.query > 0) { %>
+    <% }%>
+    <% if (operation.param_types.query > 0) { %>
     <div class="parameters query">
       <h3>Query string parameters</h3>
-      <%- include('includes/paramList', {params: operation.params, param_in:
-        'query', md_to_html}); %>
+      <%- include('includes/paramList', {params: operation.params, param_in: 'query', md_to_html}); %>
     </div>
-    <% }%> <% if (operation.body) { %>
+    <% }%>
+    <% if (operation.body) { %>
     <div class="parameters body">
       <h3>Request body</h3>
       <%- include('includes/operationBody', {body: operation.body, md_to_html}); %>
     </div>
+    <% }%>
 
-    <hr />
-    <% }%><% }); %>
+    <% }); %>
   </div>
   <% }); %>
 </body>
