--- a/src/assets/index.ejs
+++ b/src/assets/index.ejs
@@ -56,7 +56,7 @@
     <% }%>
     <% if (operation.param_types.header > 0) { %>
     <div class="parameters header">
-      <h3>Header parameters</h3>
+      <h3>HTTP Header parameters</h3>
       <%- include('includes/paramList', {params: operation.params, param_in: 'header', md_to_html}); %>
     </div>
     <% }%>
