Minor fixes to response display

--- a/src/assets/includes/body.ejs
+++ b/src/assets/includes/body.ejs
@@ -17,6 +17,8 @@
     <% for (const [name, param] of Object.entries(content.schema.properties)) { %>
     <%- include('param', {name, param, required: false, exploded: false, md_to_html}); %>
     <% } %>
+    <% } else if (content.schema.type == 'array' && content.schema.items) { %>
+    <%- include('param', {name: 'Each entry', param: content.schema.items, required: false, exploded:true, md_to_html}); %>
     <% } else { %>
     <div>I don't know what type of body this is.</div>
     <div><%= JSON.stringify(content.schema) %></div>
