--- a/src/assets/includes/response.ejs
+++ b/src/assets/includes/response.ejs
@@ -17,6 +17,14 @@
   <% if (response.content) { %>
   <% for (const [bodyType, bodyContent] of Object.entries(response.content)) { %>
   <%- include('body', {bodyType, description: null, content: bodyContent, md_to_html}); %>
+  <% if (bodyContent.example) { %>
+  <%- include('example', {bodyType, name: '', description: null, value: bodyContent.example, md_to_html}); %>
+  <% } %>
+  <% if (bodyContent.examples) { %>
+  <% for (const [name, example] of Object.entries(bodyContent.examples)) { %>
+  <%- include('example', {bodyType, name, description: example.description, value: example.value, md_to_html}); %>
+  <% } %>
+  <% } %>
   <% } %>
   <% } %>
 </div>
