--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,4 +1,5 @@
 @use 'normalize';
+@use 'highlight_googlecode';
 
 // variables
 $regular-font-family: Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -130,6 +131,7 @@ body > .path {
   }
 
   .operation-body {
+    margin: 1.25em 0 0;
     > .name {
       margin-left: 1.2em;
       margin-bottom: .6em;
@@ -168,6 +170,7 @@ body > .path {
       border-radius: 0.4em;
       font-family: $code-font-family;
       white-space: pre-wrap;
+      overflow-wrap: break-word;
     }
     + .operation-body {
       margin-top: 1.5em;
