--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -440,3 +440,36 @@ body > .path {
     }
   }
 }
+
+// API server lists
+.front-matter table.servers {
+  margin-left: -1em;
+  tbody tr:not(:nth-child(1)) td {
+    border-top: none;
+  }
+  td.url {
+    border-left: none;
+  }
+}
+.parameters.servers table.servers {
+  margin-left: 1.2em;
+  border: rgb(30 28 28 / 12%) 1px solid;
+  border-radius: .6em;
+  td.url {
+    border-left: rgb(30 28 28 / 12%) 1px solid;
+  }
+}
+table.servers {
+  border-spacing: 0;
+
+  tbody tr:not(:nth-child(1)) td {
+    border-top: rgb(30 28 28 / 12%) 1px solid;
+  }
+  th, td {
+    padding: 0.4em 1em;
+  }
+  td.url {
+    font-family: $code-font-family;
+    font-size: .9em;
+  }
+}
