--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -478,3 +478,11 @@ table.servers {
     font-size: .9em;
   }
 }
+
+.front-matter .unofficial {
+  display: block;
+  font-size: 0.7em;
+  font-style: italic;
+  font-weight: normal;
+  margin-top: .2em;
+}
