Add HTML validator test

--- a/src/assets/index.ejs
+++ b/src/assets/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -47,7 +47,7 @@
   </div>
 
   <% extra_pages.forEach(page => { %>
-  <div id="<% page.slug %>" class="x-page">
+  <div id="<%= page.slug %>" class="x-page">
     <h2>
       <%= page.name %>
     </h2>
