--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -518,3 +518,48 @@ table.servers {
   font-weight: normal;
   margin-top: .2em;
 }
+
+// readme-flavoured markdown
+rdme-callout {
+  display: block;
+  border: #ddd 1px solid;
+  border-left-width: .2em;
+  border-radius: .5em;
+  padding: .5em 0 .5em 1.2em;
+  margin: .7em 0;
+  &[theme="okay"] {
+    border-color: #b7dea8;
+    background: #f7fff4;
+    // #5ca242
+  }
+  &[theme="info"] {
+    border-color: #adbeeb;
+    background: #f8fcff;
+  }
+  &[theme="warn"] {
+    border-color: #efd6b5;
+    background: #fffef8;
+  }
+  &[theme="error"] {
+    border-color: #e6a9a9;
+    background: #fff8f8;
+  }
+  > p {
+    margin: 0;
+    margin-top: .5em
+  }
+  p:first-child {
+    margin-top: 0;
+    font-weight: bold;
+    display: inline;
+    vertical-align: text-bottom;
+  }
+  &::before {
+    content: attr(icon) " ";
+    display: inline-block;
+    vertical-align: text-bottom;
+    width: 1.7em;
+    font-size: 1.1em;
+    text-align: center;
+  }
+}
